--- a/trunk/GameSDK/GameCore/GameCore.vcproj
+++ b/trunk/GameSDK/GameCore/GameCore.vcproj
@@ -68,7 +68,7 @@
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/GameCore.pdb"
 				SubSystem="2"
-				ImportLibrary="../../lib/debug/GameCore.lib"
+				ImportLibrary="$(SolutionDir)lib/$(ConfigurationName)/$(TargetName).lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -146,7 +146,7 @@
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				ImportLibrary="../../lib/release/GameCore.lib"
+				ImportLibrary="$(SolutionDir)lib/$(ConfigurationName)/$(TargetName).lib"
 				TargetMachine="1"
 			/>
 			<Tool
