--- a/trunk/GameSDK/GameWorld/GameWorld.vcproj
+++ b/trunk/GameSDK/GameWorld/GameWorld.vcproj
@@ -68,7 +68,7 @@
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/GameWorld.pdb"
 				SubSystem="2"
-				ImportLibrary="../../lib/debug/GameWorld.lib"
+				ImportLibrary="$(SolutionDir)lib/$(ConfigurationName)/$(TargetName).lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -147,7 +147,7 @@
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				ImportLibrary="../../lib/release/GameWorld.lib"
+				ImportLibrary="$(SolutionDir)lib/$(ConfigurationName)/$(TargetName).lib"
 				TargetMachine="1"
 			/>
 			<Tool
