--- a/trunk/GameSDK/GameUILib/GUI.vcproj
+++ b/trunk/GameSDK/GameUILib/GUI.vcproj
@@ -316,6 +316,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\VTune\GUI.vpj"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
