--- a/GameSDK/GameWorld/GameWorld.vcproj
+++ b/GameSDK/GameWorld/GameWorld.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".\;.\include;..\GameCore\Include"
+				AdditionalIncludeDirectories=".\;.\include;..\GameCore\Include;..\..\Helplib"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;GAMEWORLD_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
