--- a/trunk/GameSDK/SLB/SLB.vcproj
+++ b/trunk/GameSDK/SLB/SLB.vcproj
@@ -39,7 +39,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;..\lua-5.1.4\src&quot;;.\include"
-				PreprocessorDefinitions="_WIN32;_DEBUG;_LIB;SLB_EXTERNAL_LUA;_CRT_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="_WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE"
 				GeneratePreprocessedFile="0"
 				RuntimeLibrary="3"
 				BufferSecurityCheck="false"
