--- a/trunk/LuaStudio/scintilla/scintilla.vcproj
+++ b/trunk/LuaStudio/scintilla/scintilla.vcproj
@@ -55,7 +55,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="Imm32.lib"
-				ImportLibrary="$(SolutionDir)Lib\$(ConfigurationName)$(TargetName).lib"
+				ImportLibrary="$(SolutionDir)Lib\$(ConfigurationName)\$(TargetName).lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -124,7 +124,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="Imm32.lib"
-				ImportLibrary="$(SolutionDir)Lib\$(ConfigurationName)$(TargetName).lib"
+				ImportLibrary="$(SolutionDir)Lib\$(ConfigurationName)\$(TargetName).lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
