--- a/trunk/LuaStudio/src/LuaStudio.rc
+++ b/trunk/LuaStudio/src/LuaStudio.rc
@@ -592,13 +592,13 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,174,55,50,14
 END
 
-IDD_SELECT_DEBUGER DIALOGEX 0, 0, 244, 28
+IDD_SELECT_DEBUGER DIALOGEX 0, 0, 244, 167
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,187,7,50,14
-    COMBOBOX        IDC_COMBO_NAMEPIPE,7,7,175,93,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "&Attach",IDOK,187,143,50,17
+    CONTROL         "",IDC_LIST_LUAPIPE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,230,133
 END
 
 
@@ -663,7 +663,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 237
         TOPMARGIN, 7
-        BOTTOMMARGIN, 21
+        BOTTOMMARGIN, 160
     END
 END
 #endif    // APSTUDIO_INVOKED
