--- a/trunk/GameClient/GameClient.vcproj
+++ b/trunk/GameClient/GameClient.vcproj
@@ -193,6 +193,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ClientIME.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ClientMap.cpp"
 				>
 			</File>
@@ -236,6 +240,10 @@
 			</File>
 			<File
 				RelativePath=".\Canvas.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ClientIME.h"
 				>
 			</File>
 			<File
