--- a/Helplib/HelperLib.vcproj
+++ b/Helplib/HelperLib.vcproj
@@ -344,7 +344,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Include\defines.h"
+				RelativePath=".\defines.h"
 				>
 			</File>
 			<File
