--- a/GameSDK/GameUILib/GUI.vcproj
+++ b/GameSDK/GameUILib/GUI.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="gb2312"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="GUI"
 	ProjectGUID="{0CAAD250-94F2-4158-A8A5-506B578D6E08}"
 	RootNamespace="GUI"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
