--- a/GameClient/GameClient.vcproj
+++ b/GameClient/GameClient.vcproj
@@ -144,7 +144,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="hge.lib lua51.lib GameWorld.lib GameCore.lib GUI.lib Helperlib.lib loki.lib"
+				ShowProgress="2"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;..\lib\$(ConfigurationName)&quot;;..\Depend\DX81SDK\Lib;&quot;..\Depend\hge181\Lib\$(ConfigurationName)&quot;;&quot;..\Depend\loki-0.1.6\Lib&quot;;&quot;..\GameSDK\lua-5.1.4\src&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
