--- a/GameSDK/GameUILib/GUI.vcproj
+++ b/GameSDK/GameUILib/GUI.vcproj
@@ -44,7 +44,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\Helplib;&quot;..\..\Depend\Loki-0.1.6\Include&quot;;&quot;..\..\Depend\Visual Leak Detector\include&quot;;..\..\LuaDebuger;&quot;..\lua-5.1.4\src&quot;;..\SLB\Include;..\GameCore\Include;./Include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_MEMLEAK_"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;LOKI_FUNCTOR_IS_NOT_A_SMALLOBJECT"
 				GeneratePreprocessedFile="0"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
@@ -112,7 +112,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\..\Helplib;&quot;..\..\Depend\Loki-0.1.6\Include&quot;;..\..\LuaDebuger;&quot;..\lua-5.1.4\src&quot;;..\SLB\Include;..\GameCore\Include;./Include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_MEMLEAK_"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_MEMLEAK_;LOKI_FUNCTOR_IS_NOT_A_SMALLOBJECT"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
