--- a/GameSDK/GameCore/GameCore.vcproj
+++ b/GameSDK/GameCore/GameCore.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".\;.\include;..\..\CommonLib;&quot;..\..\Depend\Loki-0.1.6\Include&quot;"
+				AdditionalIncludeDirectories=".\;.\include;..\..\xgcBase\Common;&quot;..\..\Depend\Loki-0.1.6\Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;CORE_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -65,11 +65,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="CommonLib.lib"
+				AdditionalDependencies="Common.lib"
 				ShowProgress="0"
 				OutputFile="$(OutDir)/ServerCore.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;..\..\Common\Depend\Loki-0.1.6\lib&quot;;&quot;$(SolutionDir)Lib\$(ConfigurationName)&quot;"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)Lib\$(ConfigurationName)&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)$(TargetName).pdb"
 				SubSystem="2"
@@ -125,7 +125,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories=".\;.\include;..\..\CommonLib;&quot;..\..\Depend\Loki-0.1.6\Include&quot;"
+				AdditionalIncludeDirectories=".\;.\include;..\..\xgcBase\Common;&quot;..\..\Depend\Loki-0.1.6\Include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;CORE_EXPORTS"
 				RuntimeLibrary="2"
 				EnableEnhancedInstructionSet="1"
@@ -147,10 +147,10 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="CommonLib.lib"
+				AdditionalDependencies="Common.lib loki.lib"
 				OutputFile="$(OutDir)/ServerCore.dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;..\..\Common\Depend\Loki-0.1.6\lib&quot;;&quot;$(SolutionDir)Lib\$(ConfigurationName)&quot;"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)Lib\$(ConfigurationName)&quot;;&quot;$(SolutionDir)Depend\Loki-0.1.6\lib&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)$(TargetName).pdb"
 				SubSystem="2"
