--- a/LuaDebuger/LuaDebuger.vcproj
+++ b/LuaDebuger/LuaDebuger.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;..\GameSDK\lua-5.1.4\src&quot;;..\CommonLib;..\Depend\Loki-0.1.6\Include"
+				AdditionalIncludeDirectories="&quot;..\GameSDK\lua-5.1.4\src&quot;;..\xgcBase\Common;..\Depend\Loki-0.1.6\Include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="1"
@@ -106,7 +106,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;..\GameSDK\lua-5.1.4\src&quot;;..\CommonLib;..\Depend\Loki-0.1.6\Include"
+				AdditionalIncludeDirectories="&quot;..\GameSDK\lua-5.1.4\src&quot;;..\xgcBase\Common;..\Depend\Loki-0.1.6\Include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="2"
